# AltayMA

./: Analysis.ipynb  README.md  flake.nix  justfile  pyproject.toml
data/: LongFalseAwareFR.csv
