[project]
name = "altay-analysis"
version = "0.1.0"
description = "Altay MA analysis"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "pymc>=5.0.0",
    "matplotlib",
    "arviz",
    "openpyxl",
    "scipy",
    "jupyter",
    "nbconvert",
    "pandoc>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build]
include = [
    "*.ipynb",
    "*.py",
]
